@@ -1,6 +1,9 @@
 Revision history for META-constants
 
 {{$NEXT}}
+    - Update copyright year
+    - Add separate CI badges for each OS
+    - Add sponsor button
 
 0.0.3  2022-09-23T20:25:25+02:00
     - Make loading without a properly fleshed out $?DISTRIBUTION more
